cropper transparent pixel in findEdges bug fixed

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -172,14 +172,14 @@ html {
     min-height: 100%;
 }
 
-#processed-preview-container{
+#edited-preview-container{
     background-color: #ffffff;
     border-radius: 5px;
     min-height: 600px;
 }
 #drop-zone {
     border: 3px dashed #ced4da;
-    border-radius: 10px;
+    border-radius: 6px;
     height: 150px;
     cursor: pointer;
     background-color: #f8f9fa;
